few small fixes
for some reason the text spills out of the inputText textarea vertically
in chrome rather than just adding a scrollbar, the others are fine, so I
just made it long enough to hold all the lines for now

--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@ button {
     width: 75px;
 }
 
-#inputText{
+textarea {
+    resize: none;
+}
+
+#inputText {
     width: 40%;
 }
 
